Updating swagger specs
